# mkdocs-mermaid-images

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/demo/: mkdocs.yml
examples/demo/docs/: index.md
mkdocs_mermaid_images/: __init__.py  plugin.py
tests/: test_plugin.py
