[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-mermaid-images"
version = "0.3.0"
description = "MkDocs plugin that renders Mermaid fences to hashed PNG assets"
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "mkdocs",
    "mermaid",
    "markdown",
    "documentation",
    "plugin",
]
dependencies = [
    "mkdocs>=1.6.1",
]

[project.urls]
Homepage = "https://github.com/peter-daly/mkdocs-mermaid-images"
Repository = "https://github.com/peter-daly/mkdocs-mermaid-images"
Documentation = "https://github.com/peter-daly/mkdocs-mermaid-images#README.md"

[project.entry-points."mkdocs.plugins"]
mermaid-images = "mkdocs_mermaid_images.plugin:MermaidImagesPlugin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
